# tempmonitor

./: BUILD.md  CMakeLists.txt  QUICKSTART.md  README.md  README_CN.md
.github/workflows/: build.yml
resources/: ICON_README.md  app.rc  convert_icon.bat
src/: Config.cpp  Config.h  FloatingWindow.cpp  FloatingWindow.h  SettingsDialog.cpp  SettingsDialog.h  TempMonitor.cpp  TempMonitor.h  TempMonitor.hpp  TrayIcon.cpp  TrayIcon.h  main.cpp  resource.h
